--- a/src/Game.css
+++ b/src/Game.css
@@ -1,9 +1,26 @@
+.DivStartGame {
+    text-align: center;
+}
+
+.StartGame {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    font-size: 24px;
+}
+
 .Game {
-  text-align: center;
-  font-size: xx-large;
+    text-align: center;
+    font-size: xx-large;
 }
 
 input {
-  font-size: xx-large;
+    font-size: xx-large;
 }
 
