added in a countdown timer and a screen which tells you your score when time is up

--- a/src/Game.css
+++ b/src/Game.css
@@ -20,6 +20,11 @@
     font-size: xx-large;
 }
 
+.DivEndGame {
+    text-align: center;
+    font-size: 24px;
+}
+
 input {
     font-size: xx-large;
 }
